# trading

./: .ocamlformat  dune-project
_build/: .db  .digest-db  log
_build/default/: trading.dune-package  trading.install  trading.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/client/: client.pp.ml
_build/default/client/.client.eobjs/byte/: dune__exe__Client.cmi  dune__exe__Client.cmti
_build/default/client/.client.eobjs/native/: dune__exe__Client.cmx
_build/default/client/.merlin-conf/: exe-client
_build/default/kernel/: esx_kernel.cma  esx_kernel.cmxa  esx_kernel.cmxs  esx_kernel.ml  esx_kernel.mli  esx_kernel.pp.ml  esx_kernel.pp.mli
_build/default/kernel/.esx_kernel.objs/byte/: esx_kernel.cmi  esx_kernel.cmo  esx_kernel.cmt  esx_kernel.cmti
_build/default/kernel/.esx_kernel.objs/native/: esx_kernel.cmx
_build/default/kernel/.merlin-conf/: lib-esx_kernel
_build/default/server/: server.ml  server.pp.ml
_build/default/server/.merlin-conf/: exe-server
_build/default/server/.server.eobjs/byte/: dune__exe__Server.cmi  dune__exe__Server.cmti
_build/default/server/.server.eobjs/native/: dune__exe__Server.cmx
_build/default/test/.merlin-conf/: exe-trading
_build/default/test/.trading.eobjs/byte/: dune__exe__Trading.cmi  dune__exe__Trading.cmti
client/: client.ml  dune  flags.ml  flags.mli
kernel/: dune  esx_kernel.ml  esx_kernel.mli
server/: dune  message_handler.ml  message_handler.mli  server.ml
test/: dune
(+4 files in other folders)
