(lang dune 3.10)
(name trading)
(generate_opam_files true)
(source
 (github j-simian/trading))
(authors "Jessica Simian")
(maintainers "Jessica Simian")
(license MIT)
(package
 (name trading)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
